# Code4EdTech_CrackNCode

./: README.md
backend/: app1.py  debug_test.py  main.py  pyproject.toml  test.ipynb  test_api.py
backend/config/: cloudinary.py  gemini.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/prisma/: schema.prisma
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/omr/: route.ts
frontend/src/app/api/student/: route.ts
frontend/src/app/api/test/: route.ts
frontend/src/app/test/: page.tsx
frontend/src/app/test/[testId]/: page.tsx
frontend/src/components/: Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  TechStack.tsx  Workflow.tsx
frontend/src/lib/: prisma.ts
frontend/src/server/auth/: config.ts
frontend/src/styles/: globals.css
