[project]
name = "code4tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.117.1",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "uvicorn>=0.36.0",
]
